ubah api get /user/:id menjadi /use/:username
